--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "jquery": "^3.2.1",
     "mongoose": "^4.11.1",
-    "q": "^1.5.0"
+    "q": "^1.5.0",
+    "sync-request": "^4.1.0"
   },
   "devDependencies": {},
   "scripts": {
